import util for tempate fetching and name generation

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "xx-element",
-  "version": "1.0.0",
-  "main": "src/Xelement.js",
+  "version": "1.1.0",
+  "main": "src/index.js",
   "scripts": {},
   "keywords": [],
   "author": "",
